--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "auto-bind": "^4.0.0",
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "http-status": "^1.5.0",
     "path": "^0.12.7",
